# NHLStats

./: .gitignore  AveragePlayersModel.pkl  BuildData.py  apiTest.py  pyproject.toml  test.py
src/: main.py
src/DataBuilder/: build_data.py
src/builder/: builder.py  data_builder.py
src/databuilder/: data_builder.py
src/loggingconfig/: logging_config.py
src/model/: algorithms.py  average_player_summarizer.py  game_entry.py  game_type.py  naive_player_summarizer.py  player_info.py  position.py  seasons.py  summarizers.py  team_map.py  utility.py
src/prediction/: linear_test.py
src/predictor/: linear_regression.py  linear_report.txt  linear_test.py  predictor.py
src/shared/: execution_context.py  utility.py
src/shared/constants/: database.py  json.py
src/train/: linear_regression.py
src/trainer/: linear_regression.py  trainer.py
