[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "NHLStats"
version = "0.0.1"
authors = [
    { name="Matthew Wallace", email="matthew.r.wallace@live.com" }
]
description = "Trying to do some machine learning on NHL stats."
readme = "README.md"
requires-python = ">=3.0"

[tool.hatch.build.targets.wheel]
packages = [
    "src/model", 
    "src/DataBuilder"
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project.scripts]
buildNhlData = "DataBuilder.build_data:build" 

[tool.setuptools.packages.find]
where = ["."]