[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "NHLStats"
version = "0.0.1"
authors = [
    { name="Matthew Wallace", email="matthew.r.wallace@live.com" }
]
description = "Trying to do some machine learning on NHL stats."
readme = "README.md"
requires-python = ">=3.0"

[tool.hatch.build.targets.wheel]
packages = [
    "src/model", 
    "src/databuilder"
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project.scripts]
buildNhlGames = "databuilder.data_builder:DataBuilder.build_games" 
buildNhlPlayers = "databuilder.data_builder:DataBuilder.build_players" 

[tool.setuptools.packages.find]
where = ["."]