[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "NHLStats"
version = "0.1.0"
authors = [
    { name="Matthew Wallace", email="matthew.r.wallace@live.com" }
]
description = "Tool to use NHL API stats to predict future game outcomes."
readme = "README.md"
requires-python = ">=3.0"

[tool.hatch.build.targets.wheel]
packages = [
    "src/loggingconfig",
    "src/model", 
    "src/builder",
    "src/predictor",
    "src/trainer"
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.setuptools.packages.find]
where = ["."]